# PTOAS

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  bootstrap.sh  env.sh  install.sh
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
docker/: test_ptoas_cli.sh  (+1 more)
test/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/pto/: async_put_get_emitc.pto  async_put_invalid_non_1d.pto  empty_func.pto  eventid_array_dyn_sync.pto  eventid_array_get_set_get.pto  insert_sync_level3_enable.pto  plan_memory_bind_tile_alias_liveness.pto  plan_memory_reserve_buffer_manual_reject_nested_alloc.pto  plan_memory_reserve_buffer_prefix.pto  pto_entry_multifunc_no_entry.pto  pto_entry_recursive_rejected.pto  record_wait_event.pto  resolve_reserved_buffers_reject_incomplete_peer_group_a5.pto  set_validshape_if.pto  set_validshape_local_lowering.pto  tassign_level3_loop_rebind.pto  tassign_level3_missing_alloc_addr.pto  tci_i16_emitc.pto  tcvt_emitc.pto  tdivs_dual_order_emitc.pto  textract_a5_scaling_pipe_selection.pto  tgather_three_forms_emitc.pto  tile_compact_mode_emitc.pto  tinsert_a5_vec_mat_mode_lowering.pto  tinsert_a5_vec_pipe_selection.pto  tinsert_verify_a5_f32_ok.pto  tmatmul_mx_emitc.pto  tmov_acc_mat_pipe_selection.pto  tmrgsort_executed_constant_emitc.pto  tmrgsort_variants_emitc.pto  tprint_alloc_tile_no_rebind.pto  tpush_tpop_dir_both.pto  tpush_tpop_emitc.pto  tpush_tpop_frontend_lowering_a3.pto  tpush_tpop_frontend_lowering_a5.pto  tpush_tpop_frontend_mixed_split_a5.pto  tpush_tpop_frontend_nosplit_a5.pto  tpush_tpop_frontend_nosplit_conflict_a5.pto  tquant_e2e.pto  tquant_verify_invalid.pto  (+4 more)
(+502 files in other folders)
